--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <iframe src="../adhi.jpeg" name="adhi" target="_blank" width="100%" height="400"></iframe>
+      <a href="https://www.bing.com/" target="adhi"><button >Tab Here</button></a><br>
+      <a href="https://aitsrajampet.ac.in/placement-gallery" target="adhi"><button>Click Here</button></a><br>
     <a href="https://www.barbequenation.com"> <img src="../rest/r1.jpeg" alt="r1"></a>
     <a href="https://www.tridenthotels.com"> <img src="../rest/r2.jpeg" alt="r2"></a>
     <a href="https://www.marriott.com"> <img src="../rest/r3.jpeg" alt="r3"></a>
